--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -54,7 +54,8 @@ services:
       - db_root_password
       - db_password
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-uroot", "-p$(cat /run/secrets/db_root_password)"]
+      test: ["CMD-SHELL", "mysqladmin ping -uroot -p$(cat /run/secrets/db_root_password)"]
+      # test: ["CMD", "mysqladmin", "ping", "-uroot", "-p$(cat /run/secrets/db_root_password)"]
       # test: ["CMD", "mysql", "-uroot", "-p$(cat /run/secrets/db_root_password)", "-e", "\"USE $MYSQL_DATABASE; SELECT 1;\""]
       interval: 30s
       timeout: 10s
