--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,20 +1,25 @@
 # Use the penultimate stable version of Debian
 FROM debian:bullseye-slim
 
-# Install NGINX and dependencies
+# Install NGINX, OpenSSL, and envsubst
 RUN apt-get update && \
-	apt-get install -y nginx openssl && \
+	apt-get install -y nginx openssl gettext-base && \
 	rm -rf /var/lib/apt/lists/*
 
-# Copy the custom NGINX configuration
-COPY conf/nginx.conf /etc/nginx/nginx.conf
+# Create the SSL directory
+RUN mkdir -p /etc/nginx/ssl
 
-# Copy SSL certificates (generated using OpenSSL)
-COPY tools/generate_ssl.sh /generate_ssl.sh
-RUN chmod +x /generate_ssl.sh && /generate_ssl.sh
+# Copy the custom NGINX configuration
+COPY conf/nginx.conf /etc/nginx/nginx.conf.template
+
+# Copy the entrypoint script
+COPY tools/entrypoint.sh /entrypoint.sh
+
+# Make the entrypoint script executable
+RUN chmod +x /entrypoint.sh
 
 # Expose port 443 (HTTPS)
 EXPOSE 443
 
-# Start NGINX in the foreground
-CMD ["nginx", "-g", "daemon off;"]
+# Use the custom entrypoint script
+ENTRYPOINT ["/entrypoint.sh"]
