chore: Refactor code in NGINX and WordPress related files. Delete www.conf from WordPress directory - now setting to listening port 9000 is defined inside entrypoint.sh script file.

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,6 +1,7 @@
+# Docker Compose Settings
 version: '3.8'
 
-# Settings for Services
+# Used Services
 services:
 
   # NGINX Service
@@ -16,8 +17,8 @@ services:
       - inception_network
     environment:
       - DOMAIN_NAME=${DOMAIN_NAME}
-    depends_on: # Start NGINX only after WordPress is ready and running
-      wordpress:
+    depends_on:
+      wordpress: # Start NGINX only after WordPress is ready and running
         condition: service_healthy
 
   # WordPress Service
