chore: Refactor MariaDB related files. Modify Makefile.

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -8,26 +8,15 @@ RUN apt-get update && \
 	mariadb-client \
 	&& rm -rf /var/lib/apt/lists/*
 
-# Create directories for MariaDB
-RUN mkdir -p /run/mysqld /var/lib/mysql
-
-# Set permissions for MariaDB directories
-RUN chown -R mysql:mysql /run/mysqld /var/lib/mysql
-
 # Copy the custom configuration file
 COPY conf/50-server.cnf etc/mysql/mariadb.conf.d/50-server.cnf
 
-# Copy the initialization script
-COPY tools/init.sh /init.sh
-
-# Copy the custom entrypoint script
+# Copy scripts for entrypoint and initialization
 COPY tools/entrypoint.sh /entrypoint.sh
+COPY tools/init.sh /docker-entrypoint-initdb.d/init.sh
 
-# Make the script executable
-RUN chmod +x /init.sh /entrypoint.sh
+# Make scripts executable
+RUN chmod +x /entrypoint.sh /docker-entrypoint-initdb.d/init.sh
 
 # Use the custom entrypoint script
 ENTRYPOINT ["/entrypoint.sh"]
-
-# Start MariaDB
-CMD ["mysqld", "--user=mysql"]
